Fixed brand block align.

--- a/style.css
+++ b/style.css
@@ -2,12 +2,6 @@
 
 /*NORMALIZE*/
 
-
-/** {
-    margin: 0;
-    padding: 0;
-}*/
-
 body {
     margin: 0;
     padding: 0;
@@ -183,7 +177,6 @@ body {
     width: 100%;
     height: 160px;
     background: #fff;
-    clear: both;
 }
 
 .instagram-feed {
@@ -394,11 +387,6 @@ body {
     border-left: 1px solid rgba(167, 167, 167, 0.8);
     height: 330px;
     margin: 50px 24px 0 24px;
-}
-
-.spacer {
-	width: 100%;
-	height: 160px;
 }
 
 .address__header {
@@ -785,8 +773,6 @@ body {
 }
 
 .brand-block--contacts {
-    position: absolute;
-    bottom: 0;
     width: 870px;
     padding: 83px 67px;
 }
@@ -847,6 +833,7 @@ body {
     outline: none;
     background: #fff;
     border: 1px solid rgba(167, 167, 167, 0.8);
+    margin-bottom: 16px;
 }
 
 .feedback-form__input--submit:hover {
